package solid.interfacesegregation.solution;

public class Operations implements interfaceOperations1, interfaceOperations2, interfaceOperations3 {


    @Override
    public void operation1(){};

    @Override
    public void operation2(){};

    @Override
    public void operation3(){};
}
