package solid.interfacesegregation.solution;

public interface interfaceOperations1 {
    void operation1();
}
