package solid.interfacesegregation.solution;

public interface interfaceOperations2 {
    void operation2();
}
