package solid.interfacesegregation.solution;

public interface interfaceOperations3 {
    void operation3();
}
