@startuml

title __SOLUTION's Class Diagram__\n

  namespace solid.interfacesegregation.solution {
    class solid.interfacesegregation.solution.AContainer {
        + AContainer()
        + doYourContainerStuffToMe()
    }
  }
  

  namespace solid.interfacesegregation.solution {
    class solid.interfacesegregation.solution.AMachine {
        + AMachine()
        + doSomeWork()
    }
  }
  

  namespace solid.interfacesegregation.solution {
    class solid.interfacesegregation.solution.MUser {
        + MUser()
        + doYourOperations()
    }
  }
  

  namespace solid.interfacesegregation.solution {
    class solid.interfacesegregation.solution.Operations {
        + operation1()
        + operation2()
        + operation3()
    }
  }
  

  namespace solid.interfacesegregation.solution {
    interface solid.interfacesegregation.solution.interfaceOperations1 {
        {abstract} + operation1()
    }
  }
  

  namespace solid.interfacesegregation.solution {
    interface solid.interfacesegregation.solution.interfaceOperations2 {
        {abstract} + operation2()
    }
  }
  

  namespace solid.interfacesegregation.solution {
    interface solid.interfacesegregation.solution.interfaceOperations3 {
        {abstract} + operation3()
    }
  }
  

  solid.interfacesegregation.solution.AContainer o-- solid.interfacesegregation.solution.interfaceOperations3 : ops
  solid.interfacesegregation.solution.AMachine o-- solid.interfacesegregation.solution.interfaceOperations2 : ops
  solid.interfacesegregation.solution.MUser o-- solid.interfacesegregation.solution.interfaceOperations1 : ops
  solid.interfacesegregation.solution.Operations .up.|> solid.interfacesegregation.solution.interfaceOperations1
  solid.interfacesegregation.solution.Operations .up.|> solid.interfacesegregation.solution.interfaceOperations2
  solid.interfacesegregation.solution.Operations .up.|> solid.interfacesegregation.solution.interfaceOperations3


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
